@@ -14,6 +14,8 @@ version 1.9.5, in progress
   a list can now be substituted for the name of a series
 - New function quantc(): returns one or more quantiles of the columns
   of a matrix
+- Fix bug: wrong out-of-sample forecasts for ARMA models with seasonal
+  MA terms
 
 2011-02-24 version 1.9.4
 - Change the default random number generator from GLib's 
